[gd_scene load_steps=72 format=2]

[ext_resource path="res://Scenes/Robot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Robot3.gd" type="Script" id=2]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_016.png" type="Texture" id=3]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_012.png" type="Texture" id=4]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_015.png" type="Texture" id=5]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_009.png" type="Texture" id=6]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_000.png" type="Texture" id=7]
[ext_resource path="res://Ressources/Robot3/05_Jump/Jump_011.png" type="Texture" id=8]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_013.png" type="Texture" id=9]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_017.png" type="Texture" id=10]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_003.png" type="Texture" id=11]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_007.png" type="Texture" id=12]
[ext_resource path="res://Ressources/Robot3/05_Jump/Jump_010.png" type="Texture" id=13]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_008.png" type="Texture" id=14]
[ext_resource path="res://Ressources/Robot3/05_Jump/Jump_012.png" type="Texture" id=15]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_001.png" type="Texture" id=16]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_005.png" type="Texture" id=17]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_004.png" type="Texture" id=18]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_006.png" type="Texture" id=19]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_010.png" type="Texture" id=20]
[ext_resource path="res://Ressources/Robot3/05_Jump/Jump_009.png" type="Texture" id=21]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_011.png" type="Texture" id=22]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_002.png" type="Texture" id=23]
[ext_resource path="res://Ressources/Robot3/06_Attack/Attack_014.png" type="Texture" id=24]
[ext_resource path="res://Ressources/Robot3/05_Jump/Jump_004.png" type="Texture" id=25]
[ext_resource path="res://Ressources/Robot3/05_Jump/Jump_006.png" type="Texture" id=26]
[ext_resource path="res://Ressources/Robot3/05_Jump/Jump_007.png" type="Texture" id=27]
[ext_resource path="res://Ressources/Robot3/05_Jump/Jump_008.png" type="Texture" id=28]
[ext_resource path="res://Ressources/Robot3/05_Jump/Jump_005.png" type="Texture" id=29]
[ext_resource path="res://Ressources/Robot3/05_Jump/Jump_002.png" type="Texture" id=30]
[ext_resource path="res://Ressources/Robot3/05_Jump/Jump_003.png" type="Texture" id=31]
[ext_resource path="res://Ressources/Robot3/01_Idle/idle_006.png" type="Texture" id=32]
[ext_resource path="res://Ressources/Robot3/03_Walk/Walk_004.png" type="Texture" id=33]
[ext_resource path="res://Ressources/Robot3/01_Idle/idle_004.png" type="Texture" id=34]
[ext_resource path="res://Ressources/Robot3/01_Idle/idle_005.png" type="Texture" id=35]
[ext_resource path="res://Ressources/Robot3/01_Idle/idle_001.png" type="Texture" id=36]
[ext_resource path="res://Ressources/Robot3/03_Walk/Walk_005.png" type="Texture" id=37]
[ext_resource path="res://Ressources/Robot3/03_Walk/Walk_010.png" type="Texture" id=38]
[ext_resource path="res://Ressources/Robot3/03_Walk/Walk_008.png" type="Texture" id=39]
[ext_resource path="res://Ressources/Robot3/03_Walk/Walk_001.png" type="Texture" id=40]
[ext_resource path="res://Ressources/Robot3/03_Walk/Walk_006.png" type="Texture" id=41]
[ext_resource path="res://Ressources/Robot3/03_Walk/Walk_011.png" type="Texture" id=42]
[ext_resource path="res://Ressources/Robot3/05_Jump/Jump_000.png" type="Texture" id=43]
[ext_resource path="res://Ressources/Robot3/05_Jump/Jump_001.png" type="Texture" id=44]
[ext_resource path="res://Ressources/Robot3/01_Idle/idle_003.png" type="Texture" id=45]
[ext_resource path="res://Ressources/Robot3/03_Walk/Walk_007.png" type="Texture" id=46]
[ext_resource path="res://Ressources/Robot3/03_Walk/Walk_009.png" type="Texture" id=47]
[ext_resource path="res://Ressources/Robot3/01_Idle/idle_000.png" type="Texture" id=48]
[ext_resource path="res://Ressources/Robot3/01_Idle/idle_002.png" type="Texture" id=49]
[ext_resource path="res://Ressources/Robot3/01_Idle/idle_008.png" type="Texture" id=50]
[ext_resource path="res://Ressources/Robot3/01_Idle/idle_007.png" type="Texture" id=51]
[ext_resource path="res://Ressources/Robot3/03_Walk/Walk_000.png" type="Texture" id=52]
[ext_resource path="res://Ressources/Robot3/03_Walk/Walk_002.png" type="Texture" id=53]
[ext_resource path="res://Ressources/Robot3/03_Walk/Walk_003.png" type="Texture" id=54]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_004.png" type="Texture" id=55]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_000.png" type="Texture" id=56]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_005.png" type="Texture" id=57]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_001.png" type="Texture" id=58]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_006.png" type="Texture" id=59]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_007.png" type="Texture" id=60]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_008.png" type="Texture" id=61]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_009.png" type="Texture" id=62]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_010.png" type="Texture" id=63]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_011.png" type="Texture" id=64]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_012.png" type="Texture" id=65]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_013.png" type="Texture" id=66]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_014.png" type="Texture" id=67]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_002.png" type="Texture" id=68]
[ext_resource path="res://Ressources/Robot3/13_Death/Death_003.png" type="Texture" id=69]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.1055
height = 8.17174

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 48 ), ExtResource( 36 ), ExtResource( 49 ), ExtResource( 45 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 51 ), ExtResource( 50 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 11 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 24 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 10 ) ],
"loop": true,
"name": "tirer",
"speed": 15.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 58 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 55 ), ExtResource( 57 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ) ],
"loop": true,
"name": "mourir",
"speed": 15.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 44 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 25 ), ExtResource( 29 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 15 ) ],
"loop": true,
"name": "sauter",
"speed": 20.0
}, {
"frames": [ ExtResource( 52 ), ExtResource( 40 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 33 ), ExtResource( 37 ), ExtResource( 41 ), ExtResource( 46 ), ExtResource( 39 ), ExtResource( 47 ), ExtResource( 38 ), ExtResource( 42 ) ],
"loop": true,
"name": "marcher",
"speed": 15.0
} ]

[node name="Robot3" instance=ExtResource( 1 )]
collision_mask = 1
script = ExtResource( 2 )
vie_max = 15
distance_detection = 100
temps_du_dash = 0.15

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite" parent="." index="1"]
scale = Vector2( 0.12, 0.12 )
frames = SubResource( 2 )
animation = "idle"
frame = 2

[node name="DetectionAvant" parent="." index="6"]
position = Vector2( 3, -10 )
collision_mask = 1
collide_with_areas = false

[node name="TimerDash" type="Timer" parent="." index="8"]
wait_time = 3.0
one_shot = true

[node name="TimerDureeDash" type="Timer" parent="." index="9"]
wait_time = 0.1
one_shot = true

[node name="TimerBouger" parent="." index="13"]
wait_time = 3.0
one_shot = true

[node name="TimerDetectionJoueur" parent="." index="14"]
one_shot = false

[connection signal="timeout" from="TimerDash" to="." method="_on_TimerDash_timeout"]
[connection signal="timeout" from="TimerDureeDash" to="." method="_on_TimerDureeDash_timeout"]
